Fixed element not covering full width.

--- a/beginning-css/landing-page-project/css/style.css
+++ b/beginning-css/landing-page-project/css/style.css
@@ -13,6 +13,7 @@ body {
   margin: 0;
   position: fixed;
   padding: 40px;
+  width: 100%;
 }
 
 .footer {
@@ -86,6 +87,6 @@ button{
 
 html,body{
   margin: 0;
-  width: 100vh;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
